# cudss_permute_V2

./: .gitignore  CMakeLists.txt  README.md  run_generate.sh  run_parth.sh  run_reuse.sh
cmake/: cli11.cmake  eigen.cmake  parth.cmake
output/: elim_tree.txt
output_parth/: elim_tree_cudss.txt  elim_tree_post_order.txt  elim_tree_reverse.txt
test_cudss/: CMakeLists.txt  generate.cu  generate_with_parth.cu  reuse.cu
